@@ -1,5 +1,6 @@
 AlcoBot v0.6.0 (not released):
   NEW: Expanded zipscript support to include iojZS (jeza) and php_psio (SnypeTEST).
+  FIX: The default colours are used if there are no available section colours.
 
 AlcoBot v0.5.0 (Oct 12, 2005):
   NEW: Add, fill, or remove requests from IRC with the !request, !reqfill, and !reqdel commands.
